Switch kiosk to paged flip layout and add live clock
Replace continuous horizontal scroll with a 6-column grid paged display
using CSS flip-in/flip-out animations. Add a live clock (1-second poll)
to the kiosk header showing current time in h:mm:ss a format. Update
generated Vaadin frontend artifacts.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>